--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -4,5 +4,5 @@ ResolutionY = 1080 // Use your native vertical resolution for the best results.
 
 [GENERAL]
 HDReflections = 1 // Reflection resolution will be increased based on the values set.
-ImproveReflectionLOD = 1 // Disable if you start to see invisible cars or other invisible objects.
+ImproveReflectionLOD = 1 // "Full" LOD improvement may cause objects to disappear. 1 = Partial | 2 = Full
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
