--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -4,6 +4,6 @@ ResolutionY = 1080 // Use your native vertical resolution for the best results.
 
 [GENERAL]
 HDReflections = 1 // Reflection resolution will be increased based on the values set.
-ImproveReflectionLOD = 1 // Increases the level of detail. 1 = Partial | 2 = Full
+ImproveReflectionLOD = 1 // Increases the level of detail, but may cause objects to disappear. 1 = Partial | 2 = Full
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
-RestoreReflectionLights = 1
+RestoreLights = 1 // Solves an issue that made lights invisible in reflections.
