Added RestoreShadows, Added ExpandSlotPool

--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -4,6 +4,10 @@ ResolutionY = 1080 // Use your native vertical resolution for the best results.
 
 [GENERAL]
 HDReflections = 1 // Reflection resolution will be increased based on the values set.
-ImproveReflectionLOD = 1 // Increases the level of detail, but may cause objects to disappear. 1 = Partial | 2 = Full
+ImproveReflectionLOD = 2 // Increases the level of detail. 1 = Partial | 2 = Full
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
-RestoreLights = 1 // Solves an issue that made lights invisible in reflections.
+RestoreLights = 1 // Adds car lights and traffic lights to the rearview mirror.
+RestoreShadows = 1 // Adds car shadows to the rearview mirror.
+
+[EXTRA]
+ExpandSlotPool = 1 // Solves an issue that caused objects to disappear when too much geometry was present.
