Added RestoreShaders, Added MirrorTint

--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -8,6 +8,11 @@ ImproveReflectionLOD = 2 // Increases the level of detail. 1 = Partial | 2 = Ful
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
 RestoreLights = 1 // Adds car lights and traffic lights to the rearview mirror.
 RestoreShadows = 1 // Adds car shadows to the rearview mirror.
+RestoreShaders = 1 // Adds shader effects to reflections.
 
 [EXTRA]
 ExpandSlotPool = 1 // Solves an issue that caused objects to disappear when too much geometry was present.
+MirrorTint = 1 // Changes the color of the rearview mirror based on the values set.
+MirrorTintR = 255 // Red (0-255) | Example: 212
+MirrorTintG = 255 // Green (0-255) | Example: 202
+MirrorTintB = 255 // Blue (0-255) | Example: 142
