Fixed ExpandSlotPool bug

--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -11,7 +11,7 @@ RestoreShadows = 1 // Adds car shadows to the rearview mirror.
 RestoreShaders = 1 // Adds shader effects to reflections.
 
 [EXTRA]
-ExpandSlotPool = 1 // Solves an issue that caused objects to disappear when too much geometry was present.
+ExpandSlotPool = 1 // Solves an issue that caused objects to disappear when too many polygons were present.
 MirrorTint = 1 // Changes the color of the rearview mirror based on the values set.
 MirrorTintR = 255 // Red (0-255) | Example: 212
 MirrorTintG = 255 // Green (0-255) | Example: 202
