--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -6,9 +6,8 @@ ResolutionY = 1080 // Use your native vertical resolution for the best results.
 HDReflections = 1 // Reflection resolution will be increased based on the values set.
 ImproveReflectionLOD = 2 // Increases the level of detail. 1 = Partial | 2 = Full
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
-RestoreLights = 1 // Adds car lights and traffic lights to the rearview mirror.
-RestoreShadows = 1 // Adds car shadows to the rearview mirror.
-RestoreShaders = 1 // Adds shader effects to reflections.
+RestoreDetails = 1 // Adds traffic lights, car shadows, and particle effects to the rearview mirror. 1 = Partial | 2 = Full
+RestoreShaders = 1 // Adds shader effects to the rearview mirror and enables barrier animations.
 
 [EXTRA]
 ExpandSlotPool = 1 // Solves an issue that caused objects to disappear when too many polygons were present.
