updated ImproveReflectionLOD, updated readme

--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -6,7 +6,7 @@ ResolutionY = 1080 // Use your native vertical resolution for the best results.
 HDReflections = 1 // Reflection resolution will be increased based on the values set.
 ImproveReflectionLOD = 2 // Increases the level of detail. 1 = Partial | 2 = Full
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
-RestoreDetails = 1 // Adds traffic lights, car shadows, and particle effects to the rearview mirror. 1 = Partial | 2 = Full
+RestoreDetails = 1 // Adds traffic lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and shadows | 2 = Particle effects
 RestoreShaders = 1 // Adds shader effects to the rearview mirror and enables barrier animations.
 
 [EXTRA]
