--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -1,9 +1,13 @@
 [RESOLUTION]
 ResolutionX = 1920 // Use your native horizontal resolution for the best results.
 ResolutionY = 1080 // Use your native vertical resolution for the best results.
+RoadScale = 1.0 // Scales the resolution of road reflections.
+VehicleScale = 1.0 // Scales the resolution of vehicle reflections.
+MirrorScale = 1.0 // Scales the resolution of the rearview mirror.
 
 [GENERAL]
 HDReflections = 1 // Reflection resolution will be increased based on the values set.
+HDReflectionBlur = 1 // Blur resolution will be increased based on the values set.
 ImproveReflectionLOD = 2 // Increases the level of detail. 1 = Partial | 2 = Full
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
 RestoreDetails = 1 // Adds traffic lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and shadows | 2 = Particle effects
