added OptimizedRenderDistance, updated GeometryFix

--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -12,6 +12,7 @@ ImproveReflectionLOD = 2 // Increases the level of detail. 1 = Partial | 2 = Ful
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
 RestoreDetails = 1 // Adds traffic lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and shadows | 2 = Particle effects
 RestoreShaders = 1 // Adds shader effects to the rearview mirror and enables barrier animations.
+OptimizeRenderDistance = 1 // Reduces excessive render distance of reflections to improve peformance. Xbox 360 skybox is recommended.
 
 [EXTRA]
 ExpandSlotPool = 1 // Solves an issue that caused objects to disappear when too many polygons were present.
