added desktop res detection, reverted GeometryFix, removed unsued code

--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -1,6 +1,6 @@
 [RESOLUTION]
-ResolutionX = 1920 // Use your native horizontal resolution for the best results.
-ResolutionY = 1080 // Use your native vertical resolution for the best results.
+ResolutionX = 0 // Use your native horizontal resolution for the best results. 0 = Automatically uses desktop resolution.
+ResolutionY = 0 // Use your native vertical resolution for the best results. 0 = Automatically uses desktop resolution.
 RoadScale = 1.0 // Scales the resolution of road reflections.
 VehicleScale = 1.0 // Scales the resolution of vehicle reflections.
 MirrorScale = 1.0 // Scales the resolution of the rearview mirror.
@@ -10,7 +10,7 @@ HDReflections = 1 // Reflection resolution will be increased based on the values
 HDReflectionBlur = 1 // Blur resolution will be increased based on the values set.
 ImproveReflectionLOD = 2 // Increases the level of detail. 1 = Partial | 2 = Full
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
-RestoreDetails = 1 // Adds traffic lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and shadows | 2 = Particle effects
+RestoreDetails = 1 // Adds traffic lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and Shadows | 2 = Particle Effects
 RestoreShaders = 1 // Adds shader effects to the rearview mirror and enables barrier animations.
 OptimizeRenderDistance = 1 // Reduces excessive render distance of reflections to improve performance. Xbox 360 skybox is recommended.
 
