updated default MirrorTint values

--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -17,6 +17,6 @@ OptimizeRenderDistance = 1 // Reduces excessive render distance of reflections t
 [EXTRA]
 ExpandSlotPool = 1 // Solves an issue that caused objects to disappear when too many polygons were present.
 MirrorTint = 1 // Changes the color of the rearview mirror based on the values set.
-MirrorTintR = 255 // Red (0-255) | Example: 212
-MirrorTintG = 255 // Green (0-255) | Example: 202
-MirrorTintB = 255 // Blue (0-255) | Example: 142
+MirrorTintR = 150 // Red (0-255) | Default: 150 | Example: 212
+MirrorTintG = 150 // Green (0-255) | Default: 150 | Example: 202
+MirrorTintB = 150 // Blue (0-255) | Default: 150 | Example: 142
