--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -10,13 +10,13 @@ HDReflections = 1 // Reflection resolution will be increased based on the values
 HDReflectionBlur = 1 // Blur resolution will be increased based on the values set.
 ImproveReflectionLOD = 2 // Increases the level of detail. 1 = Partial | 2 = Full
 GeometryFix = 1 // Restores missing geometry, such as frontend reflections and world detail.
-RestoreDetails = 1 // Adds traffic lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and Shadows | 2 = Particle Effects
+RestoreDetails = 1 // Adds lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and Shadows | 2 = Particle Effects
 RestoreShaders = 1 // Adds shader effects to the rearview mirror and enables barrier animations.
-OptimizeRenderDistance = 1 // Reduces excessive render distance of reflections to improve performance. Xbox 360 skybox is recommended.
+OptimizeRenderDistance = 1 // Reduces excessive render distance of reflections to improve performance.
 
 [EXTRA]
 ExpandSlotPool = 1 // Solves an issue that caused objects to disappear when too many polygons were present.
 MirrorTint = 1 // Changes the color of the rearview mirror based on the values set.
-MirrorTintR = 150 // Red (0-255) | Default: 150 | Example: 212
-MirrorTintG = 150 // Green (0-255) | Default: 150 | Example: 202
-MirrorTintB = 150 // Blue (0-255) | Default: 150 | Example: 142
+MirrorTintR = 150 // Red (0-255) | Default: 150 | DefaultVT: 212 | XB360: 212
+MirrorTintG = 150 // Green (0-255) | Default: 150 | DefaultVT: 205 | XB360: 202
+MirrorTintB = 150 // Blue (0-255) | Default: 150 | DefaultVT: 185 | XB360: 142
