OptimizeRenderDistance bug fix

--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -10,8 +10,8 @@ HDReflections = 1               // Reflection resolution will be increased based
 HDReflectionBlur = 1            // Blur resolution will be increased based on the values set.
 ImproveReflectionLOD = 2        // Increases the level of detail. 1 = Partial | 2 = Full
 GeometryFix = 1                 // Restores missing geometry, such as frontend reflections and world detail.
-RestoreDetails = 1              // Adds lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and Shadows | 2 = Particle Effects
-RestoreShaders = 1              // Adds shader effects to the rearview mirror and enables barrier animations.
+RestoreDetails = 1              // Adds lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and Shadows | 2 = and Particle Effects
+RestoreShaders = 1              // Adds shader effects to reflections and enables barrier animations.
 OptimizeRenderDistance = 1      // Reduces excessive render distance of reflections to improve performance.
 
 [EXTRA]
