--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -3,25 +3,19 @@
 ; https://github.com/ThirteenAG/WidescreenFixesPack/releases/tag/nfsmw
 
 [RESOLUTION]
-ResolutionX = 0                      // Use your native horizontal resolution for the best results. 0 = Automatically uses desktop resolution.
-ResolutionY = 0                      // Use your native vertical resolution for the best results. 0 = Automatically uses desktop resolution.
-RoadScale = 1.0                      // Scales the resolution of road reflections.
-VehicleScale = 1.0                   // Scales the resolution of vehicle reflections.
-MirrorScale = 1.0                    // Scales the resolution of the rearview mirror.
+HDReflections = 1                    // Resolution will be increased based on desktop resolution. Original values will be used if disabled.
+VehicleScale = 1.0                   // Controls the resolution multiplier of vehicle reflections.
+RoadScale = 1.0                      // Controls the resolution multiplier of road reflections.
+MirrorScale = 1.0                    // Controls the resolution multiplier of the rearview mirror.
 
 [GENERAL]
-HDReflections = 1                    // Reflection resolution will be increased based on the values set.
-HDReflectionBlur = 1                 // Blur resolution will be increased based on the values set.
-ImproveReflectionLOD = 2             // Increases the level of detail. 1 = Partial | 2 = Full
-GeometryFix = 1                      // Restores missing geometry, such as frontend reflections and world detail.
-RestoreDetails = 1                   // Adds lights, car shadows, and particle effects to the rearview mirror. 1 = Lights and Shadows | 2 = and Particle Effects
+ImproveReflectionLOD = 2             // Increases the level of detail. (1 = Partial | 2 = Full)
+RestoreVisualTreatment = 1           // Adds visual treatment to the rearview mirror. (1 = Smooth Pixels | 2 = Hard Pixels)
 RestoreShaders = 1                   // Adds shader effects to reflections and enables barrier animations.
+RestoreDetails = 1                   // Adds lights, car shadows, and particle effects to the rearview mirror. (1 = Lights and Shadows | 2 = and Particle Effects)
 OptimizeRenderDistance = 1           // Reduces excessive render distance of reflections to improve performance.
+GeometryFix = 1                      // Restores missing geometry, such as frontend reflections and world detail.
 VehicleReflectionBrightness = 1.0    // Controls the intensity of vehicle reflections.
 
 [EXTRA]
-ExpandSlotPool = 1                   // Solves an issue that caused objects to disappear when too many polygons were present.
-MirrorTint = 1                       // Changes the color of the rearview mirror based on the values set.
-MirrorTintR = 150                    // Red (0-255) | Default: 150 | DefaultVT: 212 | XB360: 212
-MirrorTintG = 150                    // Green (0-255) | Default: 150 | DefaultVT: 205 | XB360: 202
-MirrorTintB = 150                    // Blue (0-255) | Default: 150 | DefaultVT: 185 | XB360: 142
+ExpandMemoryPool = 1                 // Solves an issue that caused objects to disappear when too many polygons were present.
