--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -4,6 +4,7 @@
 
 [RESOLUTION]
 HDReflections = 1                    // Resolution will be increased based on desktop resolution. Original values will be used if disabled.
+OldGPUCompatibility = 0              // Vehicle reflections will be rounded to the nearest power of two.
 VehicleScale = 1.0                   // Controls the resolution multiplier of vehicle reflections.
 RoadScale = 1.0                      // Controls the resolution multiplier of road reflections.
 MirrorScale = 1.0                    // Controls the resolution multiplier of the rearview mirror.
