--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ NFSMWHDReflections/Release/vc142.pdb
 *.pchast
 NFSMWHDReflections/Release/stdafx.nativecodeanalysis.xml
 NFSMWHDReflections/Release/dllmain.nativecodeanalysis.xml
+NFSMWHDReflections/Release/NFSMWHDReflections.iobj
+NFSMWHDReflections/Release/NFSMWHDReflections.ipdb
