--- a/NFSMWHDReflections.ini
+++ b/NFSMWHDReflections.ini
@@ -11,7 +11,7 @@ MirrorScale = 1.0                    // Controls the resolution multiplier of th
 
 [GENERAL]
 ImproveReflectionLOD = 2             // Increases the level of detail. (1 = Partial | 2 = Full)
-RestoreVisualTreatment = 1           // Adds visual treatment to the rearview mirror. (1 = Smooth Pixels | 2 = Hard Pixels)
+RestoreVisualTreatment = 1           // Adds visual treatment to the rearview mirror. (1 = Hard Pixels | 2 = Smooth Pixels)
 RestoreShaders = 1                   // Adds shader effects to reflections and enables barrier animations.
 RestoreDetails = 1                   // Adds lights, car shadows, and particle effects to the rearview mirror. (1 = Lights and Shadows | 2 = and Particle Effects)
 OptimizeRenderDistance = 1           // Reduces excessive render distance of reflections to improve performance.
